# palloc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  azure-pipelines.yml  palloc.pc.in  readme.md
.github/workflows/: build.yml
bench/: CMakeLists.txt  README.md  bench.h  bench_core.c  bench_main.c  bench_report.py  bench_scenarios.c  bench_scenarios.h  run_bench.sh
cmake/: palloc-config-version.cmake
contrib/docker/alpine/: Dockerfile
contrib/docker/alpine-arm32v7/: Dockerfile
contrib/docker/alpine-x86/: Dockerfile
contrib/docker/manylinux-x64/: Dockerfile
contrib/vcpkg/: portfile.cmake  usage
doc/: PERFORMANCE.md
ide/vs2022/: palloc-lib.vcxproj  palloc-lib.vcxproj.filters  palloc-override-dll.vcxproj  palloc-override-dll.vcxproj.filters  palloc-override-test-dep.vcxproj  palloc-override-test.vcxproj  palloc-test-api.vcxproj  palloc-test-stress.vcxproj  palloc-test.vcxproj  palloc.sln
include/: palloc-new-delete.h  palloc-override.h  palloc-stats.h  palloc.h  palloc_backend_api.h  palloc_cxx_arena.h  palloc_vector.h
include/palloc/: arena_pomai.h  atomic.h  core_api.h  core_types.h  internal.h  prim.h  track.h  types.h
src/: alloc-aligned.c  alloc-override.c  alloc-posix.c  alloc.c  arena-abandon.c  arena.c  arena_pomai.c  bitmap.c  bitmap.h  free.c  heap.c  init.c  libc.c  options.c  os.c  page-queue.c  page.c  palloc_vector.c  random.c  segment-map.c  segment.c  static.c  stats.c
src/backends/: backend_kernel.c  backend_kernel_host.c  backend_user.c
src/prim/: prim.c
src/prim/emscripten/: prim.c
src/prim/osx/: alloc-override-zone.c
src/prim/unix/: prim.c
src/prim/wasi/: prim.c
src/prim/windows/: etw-palloc.wprp  etw.h  prim.c
test/: crt0_kernel.c  main-override-static.c  main-override.c  main-override.cpp  main.c  readme.md  test-api-fill.c  test-api.c  test-arena-pomai.c  test-basic.c  test-kernel-core.c  test-stress.c  test-user-core.c  test-wrong.c
tests/: test_arena_pomai.c
